--- a/src/templates/transferencia.html
+++ b/src/templates/transferencia.html
@@ -70,11 +70,11 @@
                 <form action="" method="POST">
                     <span id="cifrão">
                         <label for="transferencia">R$</label><br>
-                        <input type="text" name="transferencia" placeholder="00.00" pattern="[0-9]{1, 10}.[0-9]{2}" title="Separe os centavos dos reais com '.' e utilize apenas 2 casas decimais" >
+                        <input type="text" name="transferencia" placeholder="00.00" pattern="[0-9]+|[0-9]+\.[0-9]{1,2}" title="Separe os centavos dos reais com '.', utilize no máximo 2 casas decimais depois do '.' e use apenas números" autocomplete="off">
                         <p></p>
                         <label for="numero">Número da conta:</label>
                         <br>
-                        <input type="text" name="numero" maxlength="6" minlength="6">
+                        <input type="text" name="numero" maxlength="6" minlength="6" required>
                         <input type="submit" value="Transferir" id="depositar">
                     {% if gerente == 'agencia' %}
                         <button><a href="/homeGerenteAgencia">Voltar</a></button>
