mostrar tipo de conta, mudança na home para caber o tipo da conta

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -70,6 +70,7 @@
         <p>Não está logado ainda</p>
         {% endif %}
         <h2>Conta: {{numero_conta}}   Agência: {{numero_agencia}}</h2>
+        <h2> Tipo: {{contaTipo}} </h2>
         <h2>Saldo: {{ saldo | moeda }}</h2>
 
         <div>
