--- a/src/templates/encerramentoConta.html
+++ b/src/templates/encerramentoConta.html
@@ -41,7 +41,7 @@
                 <a href="/loggout">Sair</a>
             </div>
             <a href="/home">
-                <img src="../static/public/logo.png" alt="logo">
+                <img src="../static/public/logo.png" alt="logo" class="logo">
             </a>
             <div class="user">
                 <a href="/reqMudancaCadastral">
