--- a/src/templates/saque.html
+++ b/src/templates/saque.html
@@ -42,15 +42,15 @@
                 </div>
                 {% if gerente == 'geral' %}
                     <a href="/homeGerenteGeral">
-                        <img src="../static/public/logo.png" alt="logo">
+                        <img src="../static/public/logo.png" alt="logo" class="logo">
                     </a>
                 {% elif gerente == 'agencia' %}
                     <a href="/homeGerenteAgencia">
-                        <img src="../static/public/logo.png" alt="logo">
+                        <img src="../static/public/logo.png" alt="logo" class="logo">
                     </a>
                 {% else %}
                     <a href="/home">
-                        <img src="../static/public/logo.png" alt="logo">
+                        <img src="../static/public/logo.png" alt="logo" class="logo">
                     </a>
                 {% endif %}
                 <div class="user">
