--- a/src/templates/criaAgencia.html
+++ b/src/templates/criaAgencia.html
@@ -34,7 +34,7 @@
                 <br>
             </div>
             <a href="/homeGerenteGeral">
-                <img src="../static/public/logo.png" alt="logo">
+                <img src="../static/public/logo.png" alt="logo" class="logo">
             </a>
             <div class="user">
                 <a href="/reqMudancaCadastral">
