--- a/src/templates/homegerentegeral.html
+++ b/src/templates/homegerentegeral.html
@@ -13,15 +13,17 @@
       <h2>Capital total do banco: {{capitalTotal | moeda}}</h2>
     {% endblock %}
     <span>
-       {% block gerente %}
+      {% block operações %}
+      {% endblock %}
+      {% block gerente %}
       <div class="centHomeG">
         <button id="req"><a href="{{'/requisicoes/historico_operacao/%s' % (agencia)}}" class="nav-link">Requisições de depósito</a></button>
         <button id="req"><a href="{{'/requisicoes/alteracao_cadastral/%s' % (agencia)}}" class="nav-link">Requisições alterações cadastrais</a></button>
         <button id="req"><a href="{{'/requisicoes/encerramento_conta/%s' % (agencia)}}" class="nav-link">Requisições de encerramento de conta</a></button>
         <button id="req"><a href="{{'/requisicoes/confirmacao_cadastro/%s' % (agencia)}}" class="nav-link">Requisições de abertura de conta</a></button>
         <button id="req"><a href="/agencias" class="nav-link">Agencias</a></button>
-    </div>
-    {% endblock %}
+      </div>
+      {% endblock %}
     </span>
   </body>
 </html>
