template filter de datas das operações

--- a/src/templates/extrato.html
+++ b/src/templates/extrato.html
@@ -46,7 +46,7 @@
                 {% endif %}
                 <h4>Saldo anterior: {{dados['saldo_operacao'] | moeda }}</h4>
                 <h4>Valor: {{dados['valor_operacao'] | moeda }}</h4>
-                <h4>Data e hora realizada: {{dados['data_hora_operacao']}}</h4>
+                <h4>Data e hora realizada: {{dados['data_hora_operacao'] | datahora }}</h4>
             {% else %}
             {% set operacao = 'deposito-saque' %}
                 <h4>Operação: {{dados['tipo_operacao']}}</h4>
@@ -54,14 +54,16 @@
                 <h4>Valor: {{dados['valor_operacao'] | moeda }}</h4>
                 {% if dados['tipo_operacao'] == 'Depósito' %}
                     {% if dados['status_operacao'] != 'Pendente' %}
-                        <h4>Data e hora realizada: {{dados['data_hora_operacao']}}</h4>
-                        <h4>Status: {{dados['status_operacao']}} em {{dados['data_hora_confirmacao']}}</h4>
+                        <h4>Data e hora realizada: {{dados['data_hora_operacao'] | datahora }}</h4>
+                        <h4>Status: {{dados['status_operacao']}} em {{dados['data_hora_confirmacao'] | datahora }}</h4>
                     {% else %}
-                        <h4>Data e hora realizada: {{dados['data_hora_operacao']}}</h4>
+                        <h4>Data e hora realizada: {{dados['data_hora_operacao'] | datahora }}</h4>
                         <h4>Status: {{dados['status_operacao']}}</h4>
                     {% endif %}
+                {% elif dados['tipo_operacao'] == 'Rendimento Poupança' %}
+                    <h4>Data e hora realizada: {{dados['data_hora_operacao'] | data }}</h4>
                 {% else %}
-                    <h4>Data e hora realizada: {{dados['data_hora_operacao']}}</h4>
+                    <h4>Data e hora realizada: {{dados['data_hora_operacao'] | datahora }}</h4>
                 {% endif %}
             {% endif %}
             {% if dados['tipo_operacao'] == 'Rendimento Poupança' %}
