Transferência em conta poupança não negativa saldo, campo de juros da poupança nas configurações e formularios de juros aceitam número ou string de porcentagem

--- a/src/templates/configCapital.html
+++ b/src/templates/configCapital.html
@@ -12,7 +12,9 @@
                 <label for="capital_inicial">Capital Inicial disponível:</label>
                 <input type="text" name="capital_inicial" pattern="[0-9]{1, 10}.[0-9]{2}" placeholder="R$ 00.00" autocomplete="off">
                 <label for="taxa_juros">Juros:</label>
-                <input type="text" name="taxa_juros" required>
+                <input type="text" name="taxa_juros" required placeholder="Valor em porcentagem">
+                <label for="taxa_juros">Rendimento mensal da poupança:</label>
+                <input type="text" name="taxa_rendimento" required placeholder="Valor em porcentagem">
                 <label for="data_atual">Data atual:</label>
                 <input type="date" name="data_atual">
                 <button type="submit" value="Entrar">Confirmar</button>
@@ -27,7 +29,9 @@
                     {% endfor %}
                 {% endwith %}
                 <label for="taxa_juros">Juros:</label>
-                <input type="text" name="taxa_juros" required>
+                <input type="text" name="taxa_juros" required placeholder="Valor em porcentagem">
+                <label for="taxa_juros">Rendimento mensal da poupança:</label>
+                <input type="text" name="taxa_rendimento" required placeholder="Valor em porcentagem">
                 <label for="data_atual">Data atual:</label>
                 <input type="date" name="data_atual">
                 <button type="submit" value="Entrar">Confirmar</button>
