mais um pouco de responsividade

--- a/src/templates/homegerentegeral.html
+++ b/src/templates/homegerentegeral.html
@@ -19,8 +19,12 @@
       <div class="centHomeG">
         <button id="req"><a href="{{'/requisicoes/historico_operacao/%s' % (agencia)}}" class="nav-link">Requisições de depósito</a></button>
         <button id="req"><a href="{{'/requisicoes/alteracao_cadastral/%s' % (agencia)}}" class="nav-link">Requisições alterações cadastrais</a></button>
+      </div>
+      <div class="centHomeG">
         <button id="req"><a href="{{'/requisicoes/encerramento_conta/%s' % (agencia)}}" class="nav-link">Requisições de encerramento de conta</a></button>
         <button id="req"><a href="{{'/requisicoes/confirmacao_cadastro/%s' % (agencia)}}" class="nav-link">Requisições de abertura de conta</a></button>
+      </div>
+      <div class="centHomeG">
         <button id="req"><a href="/agencias" class="nav-link">Agencias</a></button>
       </div>
       {% endblock %}
