--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,6 +14,10 @@
         // pra fechar o menu
         function fecha() {
         document.getElementById("mySidenav").style.width = "0";
+        }
+        function porcentagem(i){
+            var v = i.value;
+            if(!v.includes("%")) i.value += "%";
         }
     </script>
     <title>Acesse sua conta</title>
