--- a/src/templates/criaAgencia.html
+++ b/src/templates/criaAgencia.html
@@ -57,7 +57,7 @@
                 <label for="nome_agencia">Nome da agência:</label>
                 <input type="text" name="nome_agencia" required><br>
                 <label for="numero_agencia">Número de ID da agência:</label>
-                <input type="number" name="numero_agencia" required><br>
+                <input type="number" name="numero_agencia" min="1" max="9999" step="1" required><br>
                 <label for="rua_avenida_agencia">Rua/Avenida:</label>
                 <input type="text" name="rua_avenida_agencia" required><br>
                 <label for="numero_local_agencia">Número do local da agencia:</label>
