--- a/src/templates/alteraAgencia.html
+++ b/src/templates/alteraAgencia.html
@@ -88,7 +88,7 @@
                     <label for="nome_agencia">Nome:</label><br>
                     <input type="text" name="nome_agencia" value=""><br>
                     <label for="numero_agencia">Número agência:</label><br>
-                    <input type="number" name="numero_agencia" value=""><br>
+                    <input type="number" name="numero_agencia" value="" min="1" max="9999" step="1"><br>
                     <label for="rua_avenida_agencia">Avenida/Rua:</label><br>
                     <input type="text" name="rua_avenida_agencia" value=""><br>
                     <label for="numero_local_agencia">Número do endereço:</label><br>
