--- a/src/templates/configCapital.html
+++ b/src/templates/configCapital.html
@@ -11,9 +11,9 @@
                 {% endwith %}
                 <label for="capital_inicial">Capital Inicial disponível:</label>
                 <input type="text" name="capital_inicial" pattern="[0-9]{1, 10}.[0-9]{2}" placeholder="R$ 00.00" autocomplete="off" required>
-                <label for="correcao_monetaria">Correção monetária:</label>
+                <!-- <label for="correcao_monetaria">Correção monetária:</label>
                 <p id="deflacao">coloque um valor negativo em caso de deflação</p>
-                <input onblur="porcentagem(this)" type="text" name="correcao_monetaria" required placeholder="Valor em porcentagem" required>
+                <input onblur="porcentagem(this)" type="text" name="correcao_monetaria" required placeholder="Valor em porcentagem" required> -->
                 <label for="taxa_juros">Juros:</label>
                 <input onblur="porcentagem(this)" type="text" name="taxa_juros" required placeholder="Valor em porcentagem" required>
                 <label for="taxa_juros">Rendimento mensal da poupança:</label>
@@ -31,8 +31,8 @@
                         <br><p id="confimacaoSenha">{{msg}}</p><br>
                     {% endfor %}
                 {% endwith %}
-                <label for="correcao_monetaria">Correção monetária:</label>
-                <input onblur="porcentagem(this)" type="text" name="correcao_monetaria" required placeholder="Valor em porcentagem" required>
+                <!-- <label for="correcao_monetaria">Correção monetária:</label>
+                <input onblur="porcentagem(this)" type="text" name="correcao_monetaria" required placeholder="Valor em porcentagem" required> -->
                 <label for="taxa_juros">Juros:</label>
                 <input onblur="porcentagem(this)" type="text" name="taxa_juros" required placeholder="Valor em porcentagem" required>
                 <label for="taxa_juros">Rendimento mensal da poupança:</label>
