--- a/src/static/styles/styles.css
+++ b/src/static/styles/styles.css
@@ -1117,4 +1117,17 @@ span.botoes
     text-decoration: none;
   }
   
+  .blocoAgencia{
+    gap: 0;
+    margin-top: 20%;
+    margin-bottom: 10%%;
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+  
+  .blocoAgencia > div{
+    width:auto;
+    margin-bottom: 5%;
+  }
+
 }
