--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -32,7 +32,7 @@
                 <a href="javascript:void(0)" class="closebtn" onclick="fecha()">&times;</a>
                 <a href="/cadastro">Cadastro</a>
             </div>
-            <a href="/">
+            <a href="/login">
                 <img src="../static/public/logo.png" alt="logo" class="logo">
             </a>
             </div>
