Concertando links de requisição de agencia e tirando links desnecessários para gerentes

--- a/src/static/styles/styles.css
+++ b/src/static/styles/styles.css
@@ -1130,6 +1130,9 @@ span.botoes
     margin-bottom: 5%;
   }
 
-  .blocoAgencia > div{     width: 75vw;   }
+  .blocoAgencia > div{
+    width: 75vw;
+  }
   
 }
+
