--- a/src/templates/alteraAgencia.html
+++ b/src/templates/alteraAgencia.html
@@ -26,7 +26,7 @@
             <div id="mySidenav" class="sidenav">
                 <a href="javascript:void(0)" class="closebtn" onclick="fecha()">&times;</a>
                 <a href="/homeGerenteGeral">Home</a>
-                <a href="//reqMudancaCadastral">Perfil de usuário</a>
+                <a href="/reqMudancaCadastral">Perfil de usuário</a>
                 <a href="/loggout">Sair</a>
                 <br>
             </div>
