--- a/src/templates/user.html
+++ b/src/templates/user.html
@@ -30,12 +30,8 @@
                     <a href="/homeGerenteAgencia">Home</a>
                 {% else %}
                     <a href="/home">Home</a>
-                {% endif %}
-                <a href="/saque">Saque</a>
-                <a href="/deposito">Deposito</a>
-                <a href="/transferencia">Transferencia</a>
-                <a href="/extrato">Extrato</a>        
-                <a href="//reqMudancaCadastral">Perfil de usuário</a>
+                {% endif %}   
+                <a href="/reqMudancaCadastral">Perfil de usuário</a>
                 <a href="/loggout">Sair</a>
                 <br>
             </div>
