--- a/src/templates/homegerente.html
+++ b/src/templates/homegerente.html
@@ -10,6 +10,8 @@
   <body>
     <span>
     {% extends "home.html" %} 
+    {% block cliente_normal %}
+    {% endblock %}
     {% block operações %}
     {% endblock %}
     {% block gerente %}
