--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -32,10 +32,12 @@
                 {% else %}
                     <a href="/home">Home</a>
                 {% endif %}
+                {% block cliente_normal %}
                 <a href="/saque">Saque</a>
                 <a href="/deposito">Deposito</a>
                 <a href="/transferencia">Transferencia</a>
-                <a href="/extrato">Extrato</a>        
+                <a href="/extrato">Extrato</a>
+                {% endblock %}        
                 <a href="/reqMudancaCadastral">Perfil de usuário</a>
                 <a href="/loggout">Sair</a>
                 <br>
